--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -643,7 +643,7 @@
 				<div class="laa-about-1-scn-title mb-45">
 					<h5 class="laa-subtitle-1 hero-subtitle">We're Logistify Transportation</h5>
 					<h1 class="laa-scn-title-1 " >Global Sustainable Transport and Logistics Solutions<div class="pr-clr d-inline-block">.</div></h1>
-					<p class="laa-para-1 mt-30" >Delivering eco-friendly logistics solutions globally, prioritizing sustainability and efficiency in every aspect of transportation.</p>
+					<p class="laa-para-1 mt-30 " >Delivering eco-friendly logistics solutions globally, prioritizing sustainability and efficiency in every aspect of transportation.</p>
 				</div>
 
 				<!-- feature -->
@@ -980,6 +980,410 @@
 
 	</div>
 	<!-- services-end -->
+
+	<!-- blog-start -->
+	<div class="laa-blog-1-area pt-150 p-relative">
+		<div class="container laa-container-1">
+
+			<!-- scn-title -->
+			<div class="laa-blog-1-scn-title mb-50">
+				<h5 class="laa-subtitle-1 hero-subtitle">Logistics News & Updates</h5>
+				<h2 class="laa-scn-title-1 " >Stay Updated: Latest Trends in Logistics and Transportation<span class="pr-clr">.</span></h2>
+			</div>
+
+
+			<!-- filter-btn -->
+			<div class="laa-blog-1-fillter-btn  button-group mb-40 ">
+				<button class="filter-button is-checked" data-filter="*">
+					<span class="text">all news</span>
+					<span class="icon">
+						<i class="far fa-chevron-down"></i>
+					</span>
+				</button>
+				<button class="filter-button" data-filter=".company">
+					<span class="text">Company News</span>
+					<span class="icon">
+						<i class="far fa-chevron-down"></i>
+					</span>
+				</button>
+				<button class="filter-button" data-filter=".logistics">
+					<span class="text">Logistics Services</span>
+					<span class="icon">
+						<i class="far fa-chevron-down"></i>
+					</span>
+				</button>
+				<button class="filter-button" data-filter=".market">
+					<span class="text">Market Insights</span>
+					<span class="icon">
+						<i class="far fa-chevron-down"></i>
+					</span>
+				</button>
+				<button class="filter-button" data-filter=".case">
+					<span class="text">Case Studies</span>
+					<span class="icon">
+						<i class="far fa-chevron-down"></i>
+					</span>
+				</button>
+			</div>
+
+			<!-- filter-item -->
+			<div class="laa-blog-1-fillter-item grid " >
+				<div class="grid-sizer"></div>
+				
+				<!-- single-blog -->
+				<div class="grid-item grid-size-25 logistics case" >
+		
+					<div class="laa-blog-1-fillter-item-single">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-1.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>19</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Service Innovations</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">Advanced Tracking Enhances Reliability in Global Logistics<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+
+				</div>
+
+				<!-- single-blog -->
+				<div class="grid-item grid-size-25 logistics" >
+					<div class="laa-blog-1-fillter-item-single">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-2.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>21</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Industry Insights</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">New Technologies Transforming Global Logistics and Trans<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+				</div>
+
+				<!-- single-blog -->
+				<div class="grid-item grid-size-50 market" >
+					<div class="laa-blog-1-fillter-item-single has-style-2">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-3.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>27</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Service Innovations</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">Global Logistics Industry Adopts Greener Transportation Practices<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+				</div>
+
+				<!-- single-blog -->
+				<div class="grid-item grid-size-50 market company" >
+					<div class="laa-blog-1-fillter-item-single has-style-2">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-4.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>28</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Industry Insights</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">Innovative Solutions Improve Efficiency in Freight Shipping<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+				</div>
+
+				<!-- single-blog -->
+				<div class="grid-item grid-size-25 company logistics">
+					<div class="laa-blog-1-fillter-item-single">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-5.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>15</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Sustainability Trends</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">Logistics Firm Introduces Faster Delivery Solutions Worldwide<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+				</div>
+
+				<!-- single-blog -->
+				<div class="grid-item grid-size-25 company logistics case" >
+					<div class="laa-blog-1-fillter-item-single">
+						<div class="item-img img-cover">
+							<img src="assets/imgs/blog/b1-img-6.png" alt="">
+						</div>
+
+						<div class="content">
+							<h5 class="item-date laa-font-600 laa-heading-1">
+								<span>19</span>
+								<span>aug</span>
+							</h5>
+	
+							<h4 class="item-subtitle laa-heading-1 text-uppercase laa-font-600">Technology Updates</h4>
+	
+							<h3 class="item-title laa-font-600 laa-heading-1 ">
+								<a href="#" aria-label="name">Sustainable Practices Boost Efficiency in Transportation Indus<span>...</span></a>
+							</h3>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="laa-blog-1-all-btn text-center">
+				<a href="#" aria-label="name" class="laa-pr-btn-1">
+					<span class="text" data-back="Know About Us" data-front="Know About Us"></span>
+					<span class="icon">
+						<i class="fas fa-chevron-right"></i>
+						<i class="fas fa-chevron-right"></i>
+					</span>
+				</a>
+			</div>
+
+		</div>
+
+		<div class="laa-blog-1-bg">
+			<img src="assets/imgs/blog/bg-shape.png" alt="">
+		</div>
+
+		<svg class="laa-blog-1-ani-shape" width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<rect opacity="0.16" width="70" height="70" transform="matrix(1 0 0 -1 70 70)" fill="#1A2D4E"/>
+			<rect opacity="0.16" width="70" height="70" transform="matrix(1 0 0 -1 0 70)" fill="#27AAE2"/>
+			<rect opacity="0.56" width="70" height="70" transform="matrix(1 0 0 -1 140 70)" fill="white"/>
+			<rect opacity="0.08" width="70" height="70" transform="matrix(1 0 0 -1 70 140)" fill="#F62459"/>
+		</svg>
+			
+	</div>
+	<!-- blog-end -->
+
+	<!-- animate-start -->
+	<div class="laa-animate-1-area fix">
+		<div class="laa-animate-1-wrap text-center p-relative">
+			<div class="laa-animate-1-circle">
+				<img src="assets/imgs/animate/a1-circle-1.png" alt="">
+			</div>
+			<div class="laa-animate-1-cloud-1">
+				<img src="assets/imgs/animate/a1-cloud-1.png" alt="">
+			</div>
+			<div class="laa-animate-1-cloud-2">
+				<img src="assets/imgs/animate/a1-cloud-2.png" alt="">
+			</div>
+			<div class="laa-animate-1-cloud-3">
+				<img src="assets/imgs/animate/a1-cloud-3.png" alt="">
+			</div>
+			<div class="laa-animate-1-plane">
+				<img src="assets/imgs/animate/a1-plane.png" alt="">
+			</div>
+
+			<svg class="laa-animate-1-bg-shape" width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect opacity="0.16" width="70" height="70" transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 140 70)" fill="#1A2D4E"/>
+				<rect opacity="0.16" width="70" height="70" transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 210 70)" fill="#27AAE2"/>
+				<rect opacity="0.56" width="70" height="70" transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 70 70)" fill="white"/>
+				<rect opacity="0.08" width="70" height="70" transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 140 0)" fill="#F62459"/>
+			</svg>
+				
+		</div>
+	</div>
+	<!-- animate-end -->
+
+	<!-- slide-text-start -->
+	<div class="laa-slide-text-1-area laa-scn-margin bg-default pt-30 pb-30 fix" data-background="assets/imgs/bg/text-slide-1-bg.png">
+		<div class="text-slide-1-active">
+			<div class="laa-slide-text-1-wrap">
+				<h3 class="laa-slide-text-1-item laa-heading-1 text-uppercase laa-font-700"><img src="assets/imgs/bg/truk.svg" alt="" class="icon"> Logistify Transportation</h3>
+				<h3 class="laa-slide-text-1-item laa-heading-1 text-uppercase laa-font-700"><img src="assets/imgs/bg/truk.svg" alt="" class="icon"> Logistify Transportation</h3>
+				<h3 class="laa-slide-text-1-item laa-heading-1 text-uppercase laa-font-700"><img src="assets/imgs/bg/truk.svg" alt="" class="icon"> Logistify Transportation</h3>
+			</div>
+		</div>
+	</div>
+	<!-- slide-text-end -->
+
+	<div class="laa-hight-20"></div>
+
+	<!-- features-start -->
+	<div class="laa-features-1-area laa-scn-margin bg-default pt-120 pb-120 " data-background="assets/imgs/features/f1-scn-bg.png">
+
+		<!-- scn-title -->
+		<div class="container laa-container-1">
+			<div class="laa-features-1-scn-title mb-50 text-center">
+				<h5 class="laa-subtitle-1 hero-subtitle">Logistify Transportation Features</h5>
+				<h2 class="laa-scn-title-1 has-clr-white " >Essential Features of Our Logistics Services<span class="pr-clr">.</span></h2>
+			</div>
+		</div>
+
+		<div class="laa-features-1-wrap mb-50">
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-1.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Real-Time Tracking</a>
+				</h4>
+				<p class="item-disc laa-para-1">Real-time tracking ensures you stay informed, providing live updates on your shipment's location and status.</p>
+			</div>
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-2.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Global Reach</a>
+				</h4>
+				<p class="item-disc laa-para-1">With a global reach, we deliver your goods to any destination, ensuring seamless international logistics.</p>
+			</div>
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-video">
+				<video class="plyvideo" autoplay="" loop="" muted="" src="assets/imgs/features/f1-video-1.mp4"></video>
+
+				<div class="laa-features-1-video-btn">
+					<a href="https://www.youtube.com/watch?v=f8ljCoogGtQ" aria-label="name" class="laa-play-btn-1 video_box ">
+						<svg class="icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M16 29.3332C23.3638 29.3332 29.3333 23.3636 29.3333 15.9998C29.3333 8.63604 23.3638 2.6665 16 2.6665C8.63619 2.6665 2.66666 8.63604 2.66666 15.9998C2.66666 23.3636 8.63619 29.3332 16 29.3332Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+							<path d="M13.3333 10.6665L21.3333 15.9998L13.3333 21.3332V10.6665Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+						</svg>
+                        <span>play video</span>
+                    </a>
+				</div>
+			</div>
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-3.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Eco-Friendly Solutions</a>
+				</h4>
+				<p class="item-disc laa-para-1">Eco-friendly solutions reduce emissions, promoting sustainability in efficient logistics transportation.</p>
+			</div>
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-slider p-relative">
+				<div class="swiper-container fix laa-f1-active">
+					<div class="swiper-wrapper">
+						<!-- single-slide -->
+						<div class="swiper-slide">
+							<div class="laa-features-1-slider-item img-cover">
+								<img src="assets/imgs/features/f1-img-1.png" alt="">
+							</div>
+						</div>
+						<!-- single-slide -->
+						<div class="swiper-slide">
+							<div class="laa-features-1-slider-item img-cover">
+								<img src="assets/imgs/features/f1-img-2.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="laa-features-1-slider-btn">
+					<div class="laa-left-btn-2 laa-f1-prev">
+						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M12.5 15L7.5 10L12.5 5" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+						</svg>
+						<span class="line"></span>
+					</div>
+	
+					<div class="laa-right-btn-2 laa-f1-next">
+						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M7.5 15L12.5 10L7.5 5" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+						</svg>
+						<span class="line"></span>
+					</div>
+				</div>
+
+			</div>
+
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-4.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Timely Deliveries</a>
+				</h4>
+				<p class="item-disc laa-para-1">Timely deliveries ensure your goods arrive promptly, maintaining efficiency and customer satisfaction.</p>
+			</div>
+
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-5.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Customizable Services</a>
+				</h4>
+				<p class="item-disc laa-para-1">Customizable services tailor logistics solutions to meet your specific needs and preferences efficiently.</p>
+			</div>
+
+			<!-- sinlge-box -->
+			<div class="laa-features-1-item">
+				<div class="item-icon">
+					<img src="assets/imgs/features/f1-icon-6.svg" alt="">
+				</div>
+				<h4 class="item-title laa-heading-1 laa-font-600">
+					<a href="#" aria-label="name">Advanced Security</a>
+				</h4>
+				<p class="item-disc laa-para-1">Advanced security measures protect your shipments, ensuring safe and secure logistics transportation.</p>
+			</div>
+
+		</div>
+
+		<div class="container text-center">
+			<a href="#" aria-label="name" class="laa-pr-btn-1">
+				<span class="text" data-back="Know About Us" data-front="Know About Us"></span>
+				<span class="icon">
+					<i class="fas fa-chevron-right"></i>
+					<i class="fas fa-chevron-right"></i>
+				</span>
+			</a>
+		</div>
+
+	</div>
+	<!-- features-end -->
+
 
 	<!-- For Js Library -->
 	<script src="assets/js/jquery-3.7.0.min.js"></script>
