--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -400,8 +400,61 @@
 						</div>
 					</div>
 
+					<!-- single-item -->
+					<div class="swiper-slide">
+						<div class="laa-hero-1-slider-item-bg">
+							<div class="item-bg img-cover fix ">
+								<img src="assets/imgs/hero/h1-img-4.png" alt="">
+							</div>
+
+							<div class="container laa-container-1">
+								<div class="laa-hero-1-slider-item">
+
+									<div class="laa-hero-1-slider-item-content fix">
+		
+										<h5 class="laa-subtitle-1 hero-subtitle heroslideright">Logistic Transportation Inc</h5>
+										<h1 class="laa-scn-title-1 hero-title txaa-split-text-1" >Your Dedicated Partner in Logistics</h1>
+										<p class="laa-para-1 hero-disc heroslideright" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
+		
+										<div class="btn-box heroslideright">
+											<a href="#" aria-label="name" class="laa-pr-btn-1 has-white">
+												<span class="laa-pr-btn-1-left">
+													<span class="text" data-back="Learn More" data-front="Learn More"></span>
+												</span>
+												<span class="laa-pr-btn-1-right">
+													<span class="icon">
+														<i class="fas fa-chevron-right"></i>
+														<i class="fas fa-chevron-right"></i>
+													</span>
+												</span>
+												<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="66" height="56">
+													<path d="M0 0 C18 0 18 0 24 5 C25.2375 6.36125 25.2375 6.36125 26.5 7.75 C29.50931691 10.45838522 30.96747938 11 35 11 C40.56331003 9.41048285 43.23564194 7.07207047 46.73828125 2.5234375 C48 1 48 1 50 0 C55.28 0 60.56 0 66 0 C66 18.48 66 36.96 66 56 C50 56 50 56 44 51 C43.175 50.0925 42.35 49.185 41.5 48.25 C38.49068309 45.54161478 37.03252062 45 33 45 C27.43668997 46.58951715 24.76435806 48.92792953 21.26171875 53.4765625 C20 55 20 55 18 56 C12.06 56 6.12 56 0 56 C0 37.52 0 19.04 0 0 Z " fill="#192C4D" transform="translate(0,0)"/>
+												</svg>
+											</a>
+										</div>
+		
+									</div>
+								</div>
+							</div>
+
+							<div class="bg-shape">
+								<svg class="laa-ani-box" width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect class="laa-ani-box-2"  x="70" y="70" width="70" height="70" fill="#ffffff33"/>
+									<path class="laa-ani-box-1" d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#22222252"/>
+									<rect class="laa-ani-box-3"  x="140" y="70" width="70" height="70" fill="#ffffff0f"/>
+									<rect class="laa-ani-box-4"  x="70" width="70" height="70" fill="#ffffff1a"/>
+								</svg>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
+		</div>
+
+		<!-- slider-progress -->
+		<div class="laa-hero-1-slider-pagination ">
+			<div class="laa-h-3-pagination"></div>
 		</div>
 
 		<!-- slider-btn -->
@@ -484,10 +537,13 @@
 								<div class="laa-services-1-slider-item">
 									<div class="text-right mb-80">
 										<a href="#" aria-label="name" class="laa-progress-btn ">
-											<svg class="laa-progress-btn-circle" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#000" stroke-width="1" stroke-dasharray="300px" stroke-dashoffset="0"></circle>
-												<circle r="22" cx="32" cy="32" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="106px" fill="transparent" stroke-dasharray="138.16px"></circle>
+											<svg class="laa-progress-btn-circle" width="64" height="64" viewBox="-8 -8 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#f62459" stroke-width="1" stroke-dasharray="138.16px" stroke-dashoffset="0"></circle>
+												<circle r="36" cx="32" cy="32" stroke="#f62459" stroke-width="4" stroke-linecap="butt" stroke-dashoffset="200px" fill="transparent" stroke-dasharray="200px"></circle>
 											</svg>
+
+
+
 											<svg class="laa-progress-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M7 17L17 7" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 												<path d="M7 7H17V17" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -529,9 +585,9 @@
 								<div class="laa-services-1-slider-item">
 									<div class="text-right mb-80">
 										<a href="#" aria-label="name" class="laa-progress-btn ">
-											<svg class="laa-progress-btn-circle" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#000" stroke-width="1" stroke-dasharray="300px" stroke-dashoffset="0"></circle>
-												<circle r="22" cx="32" cy="32" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="106px" fill="transparent" stroke-dasharray="138.16px"></circle>
+											<svg class="laa-progress-btn-circle" width="64" height="64" viewBox="-8 -8 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#f62459" stroke-width="1" stroke-dasharray="138.16px" stroke-dashoffset="0"></circle>
+												<circle r="36" cx="32" cy="32" stroke="#f62459" stroke-width="4" stroke-linecap="butt" stroke-dashoffset="200px" fill="transparent" stroke-dasharray="200px"></circle>
 											</svg>
 											<svg class="laa-progress-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M7 17L17 7" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -573,9 +629,9 @@
 								<div class="laa-services-1-slider-item">
 									<div class="text-right mb-80">
 										<a href="#" aria-label="name" class="laa-progress-btn ">
-											<svg class="laa-progress-btn-circle" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#000" stroke-width="1" stroke-dasharray="300px" stroke-dashoffset="0"></circle>
-												<circle r="22" cx="32" cy="32" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="106px" fill="transparent" stroke-dasharray="138.16px"></circle>
+											<svg class="laa-progress-btn-circle" width="64" height="64" viewBox="-8 -8 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+												<circle r="36" cx="32" cy="32" fill="transparent" stroke="#f62459" stroke-width="1" stroke-dasharray="138.16px" stroke-dashoffset="0"></circle>
+												<circle r="36" cx="32" cy="32" stroke="#f62459" stroke-width="4" stroke-linecap="butt" stroke-dashoffset="200px" fill="transparent" stroke-dasharray="200px"></circle>
 											</svg>
 											<svg class="laa-progress-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M7 17L17 7" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -1705,10 +1761,11 @@
 					</div>
 
 					<a href="#" aria-label="name" class="laa-progress-btn review-btn">
-						<svg class="laa-progress-btn-circle" version="1.1" xmlns="http://www.w3.org/2000/svg">
-							<circle r="36" cx="32" cy="32" fill="transparent" stroke="#000" stroke-width="1" stroke-dasharray="300px" stroke-dashoffset="0"></circle>
-							<circle r="22" cx="32" cy="32" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="106px" fill="transparent" stroke-dasharray="138.16px"></circle>
+						<svg class="laa-progress-btn-circle" width="64" height="64" viewBox="-8 -8 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+							<circle r="36" cx="32" cy="32" fill="transparent" stroke="#f62459" stroke-width="1" stroke-dasharray="138.16px" stroke-dashoffset="0"></circle>
+							<circle r="36" cx="32" cy="32" stroke="#f62459" stroke-width="4" stroke-linecap="butt" stroke-dashoffset="200px" fill="transparent" stroke-dasharray="200px"></circle>
 						</svg>
+						
 						<svg class="laa-progress-btn-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M7 17L17 7" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 							<path d="M7 7H17V17" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
