--- a/logistic-html/index-7-dark.html
+++ b/logistic-html/index-7-dark.html
@@ -1804,7 +1804,7 @@
 	<div class="laa-faq-1-area laa-scn-margin p-relative pt-95 pb-190 fix">
 
 		<div class="laa-faq-1-img">
-			<img src="assets/imgs/faq/faq-img-1.png" alt="">
+			<img src="assets/imgs/faq/faq-img-1-dark.png" alt="">
 		</div>
 
 		<div class="container laa-container-1">
@@ -2096,14 +2096,14 @@
 
 
 	<!-- footer-start -->
-	<div class="laa-footer-1-area laa-redius-20 laa-scn-margin p-relative pt-120 pb-80 fix">
+	<div class="laa-footer-1-area laa-redius-20 laa-scn-margin p-relative pt-120 pb-80 fix bg-default" data-background="assets/imgs/bg/footer-bg-dark.png">
 		<div class="container laa-container-1">
 			<div class="laa-footer-1-widget mb-120">
 
 				<!-- single-widget -->
 				<div class="laa-footer-1-widget-single">
-					<a href="index-7.html" aria-label="name" class="laa-footer-1-widget-logo d-inline-block">
-						<img src="assets/imgs/logo/logo-1.svg" alt="">
+					<a href="index-7-dark.html" aria-label="name" class="laa-footer-1-widget-logo d-inline-block">
+						<img src="assets/imgs/logo/logo-dark.svg" alt="">
 					</a>
 
 					<p class="laa-footer-1-widget-disc laa-para-1">Experience Seamless and Reliable Logistics Solutions for Global Transportation Needs.</p>	
@@ -2300,7 +2300,7 @@
 										<path d="M14.6666 4L7.99998 8.66667L1.33331 4" stroke="#F62459" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 										
-								</i>ass
+								</i>
 								info@logistify.co.uk
 							</a>
 						</li>
@@ -2344,7 +2344,7 @@
 		</div>
 
 		<div class="laa-footer-1-truk">
-			<img src="assets/imgs/bg/truk.png" alt="">
+			<img src="assets/imgs/bg/truk-dark.png" alt="">
 		</div>
 	</div>
 	<!-- footer-end -->
