counter-plugin-add

--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -18,6 +18,7 @@
   	<link rel="stylesheet" href="assets/css/jquery-ui.css">
   	<link rel="stylesheet" href="assets/css/nice-select.css">
   	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+  	<link rel="stylesheet" href="assets/css/wa-counter.css">
   	<link rel="stylesheet" href="assets/css/main.css">
   	<link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -859,7 +860,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >18</span>
+							<span class="wa-counter" >18</span>
 		
 						</h5>
 						<p class="item-disc laa-para-1">Countries</p>
@@ -873,7 +874,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >83</span>
+							<span class="wa-counter" >83</span>
 		
 						</h5>
 						<p class="item-disc laa-para-1">Locations</p>
@@ -887,7 +888,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >127</span>
+							<span class="wa-counter" >127</span>
 						</h5>
 						<p class="item-disc laa-para-1">Mio KM/Year</p>
 					</div>
@@ -900,7 +901,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >2</span><span>k+</span>
+							<span class="wa-counter" >2k+</span>
 						</h5>
 						<p class="item-disc laa-para-1">Trucks</p>
 					</div>
@@ -913,7 +914,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >7.3</span><span>k</span>
+							<span class="wa-counter" >7.3k</span>
 						</h5>
 						<p class="item-disc laa-para-1">Employees</p>
 					</div>
@@ -926,7 +927,7 @@
 					</div>
 					<div class="content">
 						<h5 class="item-title laa-heading-1 laa-font-600 text-uppercase">
-							<span class="counter" >57</span><span>+</span>
+							<span class="wa-counter" >57+</span>
 						</h5>
 						<p class="item-disc laa-para-1">Warehouses</p>
 					</div>
@@ -2382,7 +2383,7 @@
 	<script src="assets/js/isotope.pkgd.min.js"></script>
 	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
 	<script src="assets/js/masonry.pkgd.min.js"></script>
-	<script src="assets/js/jquery.counterup.min.js"></script>
+	<script src="assets/js/wa-counter.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/lenis.min.js"></script>
 	<script src="assets/js/split-type.min.js"></script>
